syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "messages.proto";

message Inventory {
  repeated InvVect invs =1 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

message InvVect {
  uint32 type = 100;
  Hash hash = 101;
}