syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message ErrorResponse {
  bytes message = 1 [(gogoproto.moretags) = "ssz-max:\"256\""];
}

message MetaData {
  uint64 seq_number =1;
  bytes subnets = 2 [(gogoproto.moretags) = "ssz-size:\"8\"", (gogoproto.casttype) = "github.com/prysmaticlabs/go-bitfield.Bitvector64"];
}

message ChainState {
  bytes genesisHash =1 [(gogoproto.moretags) = "ssz-size:\"32\""];
  uint32 protocolVersion = 2;
  uint64 timestamp  = 3;
  uint64 services = 4;
  uint32 graphState = 5;
  bytes  userAgent = 6 [(gogoproto.moretags) = "ssz-max:\"256\""];
}